--- a/app/views/discounts/show.html.erb
+++ b/app/views/discounts/show.html.erb
@@ -1,1 +1,3 @@
 <%= "Discount percentage: #{@discount.percent_discount}, item quantity: #{@discount.quantity}" %>
+
+<%= link_to "Edit Discount", edit_merchant_discount_path(@merchant, @discount)%>
