--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -1,9 +1,11 @@
-<%= "Bulk Discounts" %><br>
+<h1>Bulk Discounts</h1><br>
+<br>
 
 <% @merchant.discounts.each do |discount| %>
-  <%= "#{discount.percent_discount} percent off when #{discount.quantity} items are bought." %><br>
+  <%= require "pry"; binding.pry %>
+  <%= "#{(discount.percent_discount * 100).to_i} percent off when #{discount.quantity} items are bought." %><br>
   <%= link_to "Discount", merchant_discount_path(@merchant, discount)%><br>
-  <%= link_to "Delete", merchant_discount_path(@merchant, discount), method: :delete %>
+  <%= link_to "Delete", merchant_discount_path(@merchant, discount), method: :delete %><br>
 <% end %>
 <br>
 <%= "Upcoming Holidays" %><br>
