--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -2,8 +2,7 @@
 <br>
 
 <% @merchant.discounts.each do |discount| %>
-  <%= require "pry"; binding.pry %>
-  <%= "#{(discount.percent_discount * 100).to_i} percent off when #{discount.quantity} items are bought." %><br>
+  <%= "#{discount.percent_discount} percent off when #{discount.quantity} items are bought." %><br>
   <%= link_to "Discount", merchant_discount_path(@merchant, discount)%><br>
   <%= link_to "Delete", merchant_discount_path(@merchant, discount), method: :delete %><br>
 <% end %>
