--- a/app/views/discounts/new.html.erb
+++ b/app/views/discounts/new.html.erb
@@ -1,9 +1,9 @@
 <%= "Create a Discount" %>
 
 <%= form_with url: merchant_discounts_path(@merchant), method: "post", local: true do |form| %>
-  <%= form.label :percent_discount %><br>
-  <%= form.text_field :percent_discount %><br>
-  <%= form.label :quantity %><br>
-  <%= form.text_field :quantity %><br>
+  <%= form.label "Choose a percentage" %><br>
+  <%= form.number_field :percent_discount, min: 0, max: 1, step: 0.01 %><br>
+  <%= form.label "Choose a quantity" %><br>
+  <%= form.number_field :quantity, min: 1 %><br>
   <%= form.submit "Create Discount" %>
 <% end %>
