--- a/app/views/discounts/show.html.erb
+++ b/app/views/discounts/show.html.erb
@@ -1,3 +1,7 @@
-<%= "Discount percentage: #{@discount.percent_discount}, item quantity: #{@discount.quantity}" %>
+<h1>Discount</h1>
 
+<%= "Discount percentage: #{@discount.percent_discount}, item quantity: #{@discount.quantity}" %><br>
+<br>
 <%= link_to "Edit Discount", edit_merchant_discount_path(@merchant, @discount)%>
+<br>
+<%= link_to "All Discounts", merchant_discounts_path(@merchant) %>
